Removed varshap pem key